[gd_scene load_steps=3 format=3 uid="uid://item_detail_popup"]

[ext_resource type="Script" path="res://scenes/ui/components/ItemDetailPopup.gd" id="1_itemdetailpopup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.5)

[node name="ItemDetailPopup" type="PanelContainer"]
custom_minimum_size = Vector2(320, 450)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -225.0
offset_right = 160.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_itemdetailpopup")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/Header"]
visible = false
layout_mode = 2
text = "Ürün Detayı"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Item Name"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "RARE"
horizontal_alignment = 1

[node name="StatsVBox" type="VBoxContainer" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Item description goes here..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SellerInfo" type="HBoxContainer" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
alignment = 1

[node name="SellerLabel" type="Label" parent="VBoxContainer/InfoContainer/SellerInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Satıcı: Unknown"

[node name="Footer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PriceLabel" type="Label" parent="VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "5000 Altın"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer/Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "SATIN AL"
